<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ym_screen_border_margin">

        <LinearLayout
            android:id="@+id/ym_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/ym_screen_border_margin"
            android:visibility="gone">

            <TextView
                style="@style/ym_text_view"
                android:id="@+id/ym_error_title"
                android:text="@string/ym_error_something_wrong_title"
                android:textColor="@color/ym_text_color_dark"/>

            <TextView
                style="@style/ym_text_view.Small"
                android:id="@+id/ym_error_message"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/ym_error_authorization_reject"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ym_island">

            <EditText
                android:id="@+id/ym_csc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberPassword"/>

            <TextView
                style="@style/ym_text_view.Small"
                android:id="@+id/ym_csc_hint"
                android:layout_marginTop="4dp"
                android:text="@string/ym_csc_hint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <Button
                    style="@style/ym_button.Secondary"
                    android:id="@+id/ym_cancel"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@android:string/cancel"/>

                <View
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"/>

                <Button
                    style="@style/ym_button.Primary"
                    android:id="@+id/ym_pay"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ym_csc_pay"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
