<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/ym_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ym_screen_border_margin"
            android:src="@drawable/ym_success_big"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/ym_text_view.Title"
            android:gravity="center"
            android:text="@string/ym_success_thank_you"/>

        <TextView
            style="@style/ym_text_view.Large"
            android:layout_marginTop="@dimen/ym_screen_border_margin"
            android:id="@+id/ym_comment"
            android:gravity="center"
            android:text="@string/ym_success_comment"/>

        <RelativeLayout
            style="@style/ym_card"
            android:id="@+id/ym_card"
            android:background="@drawable/ym_card_active">

            <ImageView
                style="@style/ym_text_view.Large"
                android:id="@+id/ym_payment_card_type"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/ym_screen_border_margin"
                android:layout_marginRight="@dimen/ym_screen_border_margin"
                android:layout_marginEnd="16dp"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/ym_text_view.Large"
                android:id="@+id/ym_pan_fragment"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:paddingTop="50dp"
                android:textColor="@color/ym_text_color_pan_fragment"/>

        </RelativeLayout>

        <Button
            style="@style/ym_button.Primary.Large"
            android:id="@+id/ym_save_card"
            android:layout_width="300dp"
            android:text="@string/ym_success_save_card"/>

        <ImageView
            android:id="@+id/ym_success_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ym_success_marker"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/ym_text_view.Small"
            android:id="@+id/ym_description"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/ym_success_save_card_description"/>

    </LinearLayout>

</ScrollView>